[gd_scene load_steps=12 format=3 uid="uid://cn8ein6jc6frg"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_c7xow"]
[ext_resource type="Texture2D" uid="uid://b0yuglgf5hf8t" path="res://Assets/BerryGardenTiles.png" id="2_d3ghr"]
[ext_resource type="Texture2D" uid="uid://c11lbgrfjcuo4" path="res://Assets/Sprites/Building/pokemon_center.png" id="3_3b8nn"]
[ext_resource type="Script" path="res://Scenes/TileSet.gd" id="3_acinl"]
[ext_resource type="PackedScene" uid="uid://213qfeta8ufe" path="res://Scenes/building.tscn" id="3_vioyy"]
[ext_resource type="Script" path="res://Scripts/camera.gd" id="5_0705s"]
[ext_resource type="PackedScene" uid="uid://bgxdshrc4i5u8" path="res://Scenes/pikachu2.tscn" id="6_ft3bd"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_jxnl8"]
vertices = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w57lp"]
texture = ExtResource("2_d3ghr")
margins = Vector2i(1, 0)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_jxnl8")
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eklea"]
resource_name = "Center"
texture = ExtResource("3_3b8nn")
texture_region_size = Vector2i(64, 63)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_c1ovg"]
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
navigation_layer_0/layers = 3
sources/0 = SubResource("TileSetAtlasSource_w57lp")
sources/1 = SubResource("TileSetAtlasSource_eklea")

[node name="Main" type="Node" node_paths=PackedStringArray("UI")]
script = ExtResource("1_c7xow")
UI = NodePath("UI")

[node name="Node2D" type="Node2D" parent="."]

[node name="Building" type="TileMap" parent="Node2D" node_paths=PackedStringArray("main")]
tile_set = SubResource("TileSet_c1ovg")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(196615, 65536, 4, 393217, 131072, 5, 65538, 65536, 4, 196614, 131072, 7, 327686, 131072, 7, 262150, 131072, 7, 196613, 0, 4, 196612, 0, 4, 327685, 0, 4, 327684, 0, 4, 851968, 65536, 4, 0, 65536, 4, 25, 65536, 4, 851993, 65536, 4, 589830, 65536, 4, -524294, 262144, 3, -458758, 262144, 3, -393222, 262144, 3, -327686, 262144, 3, -262150, 262144, 3, -196614, 262144, 3, -131078, 262144, 3, -65542, 262144, 3, -6, 262144, 3, 65530, 262144, 3, 131066, 262144, 3, 196602, 262144, 3, 262138, 262144, 3, 327674, 262144, 3, 393210, 262144, 3, 458746, 262144, 3, 524282, 262144, 3, 589818, 262144, 3, 655354, 262144, 3, 720890, 262144, 3, 786426, 262144, 3, 851962, 262144, 3, 917498, 262144, 3, 983034, 262144, 3, 1048570, 262144, 3, 1114106, 262144, 3, -524293, 262144, 3, -458757, 262144, 3, -393221, 262144, 3, -327685, 262144, 3, -262149, 262144, 3, -196613, 262144, 3, -131077, 262144, 3, -65541, 262144, 3, -5, 262144, 3, 65531, 262144, 3, 131067, 262144, 3, 196603, 262144, 3, 262139, 262144, 3, 327675, 262144, 3, 393211, 262144, 3, 458747, 262144, 3, 524283, 262144, 3, 589819, 262144, 3, 655355, 262144, 3, 720891, 262144, 3, 786427, 262144, 3, 851963, 262144, 3, 917499, 262144, 3, 983035, 262144, 3, 1048571, 262144, 3, 1114107, 262144, 3, -524292, 262144, 3, -458756, 262144, 3, -393220, 262144, 3, -327684, 262144, 3, -262148, 262144, 3, -196612, 262144, 3, -131076, 262144, 3, -65540, 262144, 3, -4, 262144, 3, 65532, 262144, 3, 131068, 262144, 3, 196604, 262144, 3, 262140, 262144, 3, 327676, 262144, 3, 393212, 262144, 3, 458748, 262144, 3, 524284, 262144, 3, 589820, 262144, 3, 655356, 262144, 3, 720892, 262144, 3, 786428, 262144, 3, 851964, 262144, 3, 917500, 262144, 3, 983036, 262144, 3, 1048572, 262144, 3, 1114108, 262144, 3, -524291, 262144, 3, -458755, 262144, 3, -393219, 262144, 3, -327683, 262144, 3, -262147, 262144, 3, -196611, 262144, 3, -131075, 262144, 3, -65539, 65536, 4, -3, 65536, 4, 65533, 65536, 4, 131069, 65536, 4, 196605, 65536, 4, 262141, 65536, 4, 327677, 65536, 4, 393213, 65536, 4, 458749, 65536, 4, 524285, 65536, 4, 589821, 65536, 4, 655357, 65536, 4, 720893, 65536, 4, 786429, 65536, 4, 851965, 65536, 4, 917501, 65536, 4, 983037, 65536, 4, 1048573, 262144, 3, 1114109, 262144, 3, -524290, 262144, 3, -458754, 262144, 3, -393218, 262144, 3, -327682, 262144, 3, -262146, 262144, 3, -196610, 262144, 3, -131074, 262144, 3, -65538, 65536, 4, -2, 65536, 4, 65534, 65536, 4, 131070, 65536, 4, 196606, 65536, 4, 262142, 65536, 4, 327678, 65536, 4, 393214, 65536, 4, 458750, 65536, 4, 524286, 65536, 4, 589822, 65536, 4, 655358, 65536, 4, 720894, 65536, 4, 786430, 65536, 4, 851966, 65536, 4, 917502, 65536, 4, 983038, 65536, 4, 1048574, 262144, 3, 1114110, 262144, 3, -524289, 262144, 3, -458753, 262144, 3, -393217, 262144, 3, -327681, 262144, 3, -262145, 262144, 3, -196609, 262144, 3, -131073, 262144, 3, -65537, 65536, 4, -1, 65536, 4, 65535, 65536, 4, 131071, 65536, 4, 196607, 65536, 4, 262143, 65536, 4, 327679, 65536, 4, 393215, 65536, 4, 458751, 65536, 4, 524287, 65536, 4, 589823, 65536, 4, 655359, 65536, 4, 720895, 65536, 4, 786431, 65536, 4, 851967, 65536, 4, 917503, 65536, 4, 983039, 65536, 4, 1048575, 262144, 3, 1114111, 262144, 3, -589824, 262144, 3, -524288, 262144, 3, -458752, 262144, 3, -393216, 262144, 3, -327680, 262144, 3, -262144, 262144, 3, -196608, 262144, 3, -131072, 65536, 4, -65536, 65536, 4, 65536, 65536, 4, 131072, 65536, 4, 196608, 65536, 4, 262144, 65536, 4, 327680, 65536, 4, 393216, 65536, 4, 458752, 65536, 4, 524288, 65536, 4, 589824, 65536, 4, 655360, 65536, 4, 720896, 65536, 4, 786432, 65536, 4, 917504, 65536, 4, 983040, 262144, 3, 1048576, 262144, 3, -589823, 262144, 3, -524287, 262144, 3, -458751, 262144, 3, -393215, 262144, 3, -327679, 262144, 3, -262143, 262144, 3, -196607, 262144, 3, -131071, 65536, 4, -65535, 65536, 4, 1, 65536, 4, 65537, 65536, 4, 131073, 131072, 4, 196609, 131072, 6, 262145, 131072, 6, 327681, 131072, 6, 458753, 65536, 4, 524289, 65536, 4, 589825, 65536, 4, 655361, 65536, 4, 720897, 65536, 4, 786433, 65536, 4, 851969, 65536, 4, 917505, 65536, 4, 983041, 262144, 3, 1048577, 262144, 3, -589822, 262144, 3, -524286, 262144, 3, -458750, 262144, 3, -393214, 262144, 3, -327678, 262144, 3, -262142, 262144, 3, -196606, 262144, 3, -131070, 65536, 4, -65534, 65536, 4, 2, 65536, 4, 131074, 196608, 6, 196610, 0, 4, 262146, 0, 4, 327682, 0, 4, 393218, 196608, 7, 458754, 65536, 4, 524290, 65536, 4, 589826, 65536, 4, 655362, 65536, 4, 720898, 65536, 4, 786434, 65536, 4, 851970, 65536, 4, 917506, 65536, 4, 983042, 262144, 3, 1048578, 262144, 3, -589821, 262144, 3, -524285, 262144, 3, -458749, 262144, 3, -393213, 262144, 3, -327677, 262144, 3, -262141, 262144, 3, -196605, 262144, 3, -131069, 65536, 4, -65533, 65536, 4, 3, 65536, 4, 65539, 65536, 4, 131075, 196608, 6, 196611, 0, 4, 262147, 0, 4, 327683, 0, 4, 393219, 196608, 7, 458755, 65536, 4, 524291, 65536, 4, 589827, 65536, 4, 655363, 65536, 4, 720899, 65536, 4, 786435, 65536, 4, 851971, 65536, 4, 917507, 65536, 4, 983043, 262144, 3, 1048579, 262144, 3, -589820, 262144, 3, -524284, 262144, 3, -458748, 262144, 3, -393212, 262144, 3, -327676, 262144, 3, -262140, 262144, 3, -196604, 262144, 3, -131068, 65536, 4, -65532, 65536, 4, 4, 65536, 4, 65540, 65536, 4, 131076, 196608, 6, 262148, 0, 4, 393220, 196608, 7, 458756, 65536, 4, 524292, 65536, 4, 589828, 65536, 4, 655364, 65536, 4, 720900, 65536, 4, 786436, 65536, 4, 851972, 65536, 4, 917508, 65536, 4, 983044, 262144, 3, 1048580, 262144, 3, -589819, 262144, 3, -524283, 262144, 3, -458747, 262144, 3, -393211, 262144, 3, -327675, 262144, 3, -262139, 262144, 3, -196603, 262144, 3, -131067, 65536, 4, -65531, 65536, 4, 5, 65536, 4, 65541, 65536, 4, 131077, 196608, 6, 262149, 0, 4, 393221, 196608, 7, 458757, 65536, 4, 524293, 65536, 4, 589829, 65536, 4, 655365, 65536, 4, 720901, 65536, 4, 786437, 65536, 4, 851973, 65536, 4, 917509, 65536, 4, 983045, 262144, 3, 1048581, 262144, 3, -589818, 262144, 3, -524282, 262144, 3, -458746, 262144, 3, -393210, 262144, 3, -327674, 262144, 3, -262138, 262144, 3, -196602, 262144, 3, -131066, 65536, 4, -65530, 65536, 4, 6, 65536, 4, 65542, 65536, 4, 131078, 196608, 4, 393222, 196608, 5, 458758, 65536, 4, 524294, 65536, 4, 655366, 65536, 4, 720902, 65536, 4, 786438, 65536, 4, 851974, 65536, 4, 917510, 65536, 4, 983046, 262144, 3, 1048582, 262144, 3, -589817, 262144, 3, -524281, 262144, 3, -458745, 262144, 3, -393209, 262144, 3, -327673, 262144, 3, -262137, 262144, 3, -196601, 262144, 3, -131065, 65536, 4, -65529, 65536, 4, 7, 65536, 4, 65543, 65536, 4, 131079, 65536, 4, 262151, 65536, 4, 327687, 65536, 4, 393223, 65536, 4, 458759, 65536, 4, 524295, 65536, 4, 589831, 65536, 4, 655367, 65536, 4, 720903, 65536, 4, 786439, 65536, 4, 851975, 65536, 4, 917511, 65536, 4, 983047, 262144, 3, 1048583, 262144, 3, -589816, 262144, 3, -524280, 262144, 3, -458744, 262144, 3, -393208, 262144, 3, -327672, 262144, 3, -262136, 262144, 3, -196600, 262144, 3, -131064, 65536, 4, -65528, 65536, 4, 8, 65536, 4, 65544, 65536, 4, 131080, 65536, 4, 196616, 65536, 4, 262152, 65536, 4, 327688, 65536, 4, 393224, 65536, 4, 458760, 65536, 4, 524296, 65536, 4, 589832, 65536, 4, 655368, 65536, 4, 720904, 65536, 4, 786440, 65536, 4, 851976, 65536, 4, 917512, 65536, 4, 983048, 262144, 3, 1048584, 262144, 3, -589815, 262144, 3, -524279, 262144, 3, -458743, 262144, 3, -393207, 262144, 3, -327671, 262144, 3, -262135, 262144, 3, -196599, 262144, 3, -131063, 65536, 4, -65527, 65536, 4, 9, 65536, 4, 65545, 65536, 4, 131081, 65536, 4, 196617, 65536, 4, 262153, 65536, 4, 327689, 65536, 4, 393225, 65536, 4, 458761, 65536, 4, 524297, 65536, 4, 589833, 65536, 4, 655369, 65536, 4, 720905, 65536, 4, 786441, 65536, 4, 851977, 65536, 4, 917513, 65536, 4, 983049, 262144, 3, 1048585, 262144, 3, -589814, 262144, 3, -524278, 262144, 3, -458742, 262144, 3, -393206, 262144, 3, -327670, 262144, 3, -262134, 262144, 3, -196598, 262144, 3, -131062, 65536, 4, -65526, 65536, 4, 10, 65536, 4, 65546, 65536, 4, 131082, 65536, 4, 196618, 65536, 4, 262154, 65536, 4, 327690, 65536, 4, 393226, 65536, 4, 458762, 65536, 4, 524298, 65536, 4, 589834, 65536, 4, 655370, 65536, 4, 720906, 65536, 4, 786442, 65536, 4, 851978, 65536, 4, 917514, 65536, 4, 983050, 262144, 3, 1048586, 262144, 3, -589813, 262144, 3, -524277, 262144, 3, -458741, 262144, 3, -393205, 262144, 3, -327669, 262144, 3, -262133, 262144, 3, -196597, 262144, 3, -131061, 65536, 4, -65525, 65536, 4, 11, 65536, 4, 65547, 65536, 4, 131083, 65536, 4, 196619, 65536, 4, 262155, 65536, 4, 327691, 65536, 4, 393227, 65536, 4, 458763, 65536, 4, 524299, 65536, 4, 589835, 65536, 4, 655371, 65536, 4, 720907, 65536, 4, 786443, 65536, 4, 851979, 65536, 4, 917515, 65536, 4, 983051, 262144, 3, 1048587, 262144, 3, -589812, 262144, 3, -524276, 262144, 3, -458740, 262144, 3, -393204, 262144, 3, -327668, 262144, 3, -262132, 262144, 3, -196596, 262144, 3, -131060, 65536, 4, -65524, 65536, 4, 12, 65536, 4, 65548, 65536, 4, 131084, 65536, 4, 196620, 65536, 4, 262156, 65536, 4, 327692, 65536, 4, 393228, 65536, 4, 458764, 65536, 4, 524300, 65536, 4, 589836, 65536, 4, 655372, 65536, 4, 720908, 65536, 4, 786444, 65536, 4, 851980, 65536, 4, 917516, 65536, 4, 983052, 262144, 3, 1048588, 262144, 3, -589811, 262144, 3, -524275, 262144, 3, -458739, 262144, 3, -393203, 262144, 3, -327667, 262144, 3, -262131, 262144, 3, -196595, 262144, 3, -131059, 65536, 4, -65523, 65536, 4, 13, 65536, 4, 65549, 65536, 4, 131085, 65536, 4, 196621, 65536, 4, 262157, 65536, 4, 327693, 65536, 4, 393229, 65536, 4, 458765, 65536, 4, 524301, 65536, 4, 589837, 65536, 4, 655373, 65536, 4, 720909, 65536, 4, 786445, 65536, 4, 851981, 65536, 4, 917517, 65536, 4, 983053, 262144, 3, 1048589, 262144, 3, -589810, 262144, 3, -524274, 262144, 3, -458738, 262144, 3, -393202, 262144, 3, -327666, 262144, 3, -262130, 262144, 3, -196594, 262144, 3, -131058, 65536, 4, -65522, 65536, 4, 14, 65536, 4, 65550, 65536, 4, 131086, 65536, 4, 196622, 65536, 4, 262158, 65536, 4, 327694, 65536, 4, 393230, 65536, 4, 458766, 65536, 4, 524302, 65536, 4, 589838, 65536, 4, 655374, 65536, 4, 720910, 65536, 4, 786446, 65536, 4, 851982, 65536, 4, 917518, 65536, 4, 983054, 262144, 3, 1048590, 262144, 3, -589809, 262144, 3, -524273, 262144, 3, -458737, 262144, 3, -393201, 262144, 3, -327665, 262144, 3, -262129, 262144, 3, -196593, 262144, 3, -131057, 65536, 4, -65521, 65536, 4, 15, 65536, 4, 65551, 65536, 4, 131087, 65536, 4, 196623, 65536, 4, 262159, 65536, 4, 327695, 65536, 4, 393231, 65536, 4, 458767, 65536, 4, 524303, 65536, 4, 589839, 65536, 4, 655375, 65536, 4, 720911, 65536, 4, 786447, 65536, 4, 851983, 65536, 4, 917519, 65536, 4, 983055, 262144, 3, 1048591, 262144, 3, -589808, 262144, 3, -524272, 262144, 3, -458736, 262144, 3, -393200, 262144, 3, -327664, 262144, 3, -262128, 262144, 3, -196592, 262144, 3, -131056, 65536, 4, -65520, 65536, 4, 16, 65536, 4, 65552, 65536, 4, 131088, 65536, 4, 196624, 65536, 4, 262160, 65536, 4, 327696, 65536, 4, 393232, 65536, 4, 458768, 65536, 4, 524304, 65536, 4, 589840, 65536, 4, 655376, 65536, 4, 720912, 65536, 4, 786448, 65536, 4, 851984, 65536, 4, 917520, 65536, 4, 983056, 262144, 3, 1048592, 262144, 3, -589807, 262144, 3, -524271, 262144, 3, -458735, 262144, 3, -393199, 262144, 3, -327663, 262144, 3, -262127, 262144, 3, -196591, 262144, 3, -131055, 65536, 4, -65519, 65536, 4, 17, 65536, 4, 65553, 65536, 4, 131089, 65536, 4, 196625, 65536, 4, 262161, 65536, 4, 327697, 65536, 4, 393233, 65536, 4, 458769, 65536, 4, 524305, 65536, 4, 589841, 65536, 4, 655377, 65536, 4, 720913, 65536, 4, 786449, 65536, 4, 851985, 65536, 4, 917521, 65536, 4, 983057, 262144, 3, 1048593, 262144, 3, -589806, 262144, 3, -524270, 262144, 3, -458734, 262144, 3, -393198, 262144, 3, -327662, 262144, 3, -262126, 262144, 3, -196590, 262144, 3, -131054, 65536, 4, -65518, 65536, 4, 18, 65536, 4, 65554, 65536, 4, 131090, 65536, 4, 196626, 65536, 4, 262162, 65536, 4, 327698, 65536, 4, 393234, 65536, 4, 458770, 65536, 4, 524306, 65536, 4, 589842, 65536, 4, 655378, 65536, 4, 720914, 65536, 4, 786450, 65536, 4, 851986, 65536, 4, 917522, 65536, 4, 983058, 262144, 3, 1048594, 262144, 3, -589805, 262144, 3, -524269, 262144, 3, -458733, 262144, 3, -393197, 262144, 3, -327661, 262144, 3, -262125, 262144, 3, -196589, 262144, 3, -131053, 65536, 4, -65517, 65536, 4, 19, 65536, 4, 65555, 65536, 4, 131091, 65536, 4, 196627, 65536, 4, 262163, 65536, 4, 327699, 65536, 4, 393235, 65536, 4, 458771, 65536, 4, 524307, 65536, 4, 589843, 65536, 4, 655379, 65536, 4, 720915, 65536, 4, 786451, 65536, 4, 851987, 65536, 4, 917523, 65536, 4, 983059, 262144, 3, 1048595, 262144, 3, -589804, 262144, 3, -524268, 262144, 3, -458732, 262144, 3, -393196, 262144, 3, -327660, 262144, 3, -262124, 262144, 3, -196588, 262144, 3, -131052, 65536, 4, -65516, 65536, 4, 20, 65536, 4, 65556, 65536, 4, 131092, 65536, 4, 196628, 65536, 4, 262164, 65536, 4, 327700, 65536, 4, 393236, 65536, 4, 458772, 65536, 4, 524308, 65536, 4, 589844, 65536, 4, 655380, 65536, 4, 720916, 65536, 4, 786452, 65536, 4, 851988, 65536, 4, 917524, 65536, 4, 983060, 262144, 3, 1048596, 262144, 3, -589803, 262144, 3, -524267, 262144, 3, -458731, 262144, 3, -393195, 262144, 3, -327659, 262144, 3, -262123, 262144, 3, -196587, 262144, 3, -131051, 65536, 4, -65515, 65536, 4, 21, 65536, 4, 65557, 65536, 4, 131093, 65536, 4, 196629, 65536, 4, 262165, 65536, 4, 327701, 65536, 4, 393237, 65536, 4, 458773, 65536, 4, 524309, 65536, 4, 589845, 65536, 4, 655381, 65536, 4, 720917, 65536, 4, 786453, 65536, 4, 851989, 65536, 4, 917525, 65536, 4, 983061, 262144, 3, 1048597, 262144, 3, -589802, 262144, 3, -524266, 262144, 3, -458730, 262144, 3, -393194, 262144, 3, -327658, 262144, 3, -262122, 262144, 3, -196586, 262144, 3, -131050, 65536, 4, -65514, 65536, 4, 22, 65536, 4, 65558, 65536, 4, 131094, 65536, 4, 196630, 65536, 4, 262166, 65536, 4, 327702, 65536, 4, 393238, 65536, 4, 458774, 65536, 4, 524310, 65536, 4, 589846, 65536, 4, 655382, 65536, 4, 720918, 65536, 4, 786454, 65536, 4, 851990, 65536, 4, 917526, 65536, 4, 983062, 262144, 3, 1048598, 262144, 3, -589801, 262144, 3, -524265, 262144, 3, -458729, 262144, 3, -393193, 262144, 3, -327657, 262144, 3, -262121, 262144, 3, -196585, 262144, 3, -131049, 65536, 4, -65513, 65536, 4, 23, 65536, 4, 65559, 65536, 4, 131095, 65536, 4, 196631, 65536, 4, 262167, 65536, 4, 327703, 65536, 4, 393239, 65536, 4, 458775, 65536, 4, 524311, 65536, 4, 589847, 65536, 4, 655383, 65536, 4, 720919, 65536, 4, 786455, 65536, 4, 851991, 65536, 4, 917527, 65536, 4, 983063, 262144, 3, 1048599, 262144, 3, -589800, 262144, 3, -524264, 262144, 3, -458728, 262144, 3, -393192, 262144, 3, -327656, 262144, 3, -262120, 262144, 3, -196584, 262144, 3, -131048, 65536, 4, -65512, 65536, 4, 24, 65536, 4, 65560, 65536, 4, 131096, 65536, 4, 196632, 65536, 4, 262168, 65536, 4, 327704, 65536, 4, 393240, 65536, 4, 458776, 65536, 4, 524312, 65536, 4, 589848, 65536, 4, 655384, 65536, 4, 720920, 65536, 4, 786456, 65536, 4, 851992, 65536, 4, 917528, 65536, 4, 983064, 262144, 3, 1048600, 262144, 3, -589799, 262144, 3, -524263, 262144, 3, -458727, 262144, 3, -393191, 262144, 3, -327655, 262144, 3, -262119, 262144, 3, -196583, 262144, 3, -131047, 65536, 4, -65511, 65536, 4, 65561, 65536, 4, 131097, 65536, 4, 196633, 65536, 4, 262169, 65536, 4, 327705, 65536, 4, 393241, 65536, 4, 458777, 65536, 4, 524313, 65536, 4, 589849, 65536, 4, 655385, 65536, 4, 720921, 65536, 4, 786457, 65536, 4, 917529, 65536, 4, 983065, 262144, 3, 1048601, 262144, 3, -589798, 262144, 3, -524262, 262144, 3, -458726, 262144, 3, -393190, 262144, 3, -327654, 262144, 3, -262118, 262144, 3, -196582, 262144, 3, -131046, 65536, 4, -65510, 65536, 4, 26, 65536, 4, 65562, 65536, 4, 131098, 65536, 4, 196634, 65536, 4, 262170, 65536, 4, 327706, 65536, 4, 393242, 65536, 4, 458778, 65536, 4, 524314, 65536, 4, 589850, 65536, 4, 655386, 65536, 4, 720922, 65536, 4, 786458, 65536, 4, 851994, 65536, 4, 917530, 65536, 4, 983066, 262144, 3, 1048602, 262144, 3, -589797, 262144, 3, -524261, 262144, 3, -458725, 262144, 3, -393189, 262144, 3, -327653, 262144, 3, -262117, 262144, 3, -196581, 262144, 3, -131045, 65536, 4, -65509, 65536, 4, 27, 65536, 4, 65563, 65536, 4, 131099, 65536, 4, 196635, 65536, 4, 262171, 65536, 4, 327707, 65536, 4, 393243, 65536, 4, 458779, 65536, 4, 524315, 65536, 4, 589851, 65536, 4, 655387, 65536, 4, 720923, 65536, 4, 786459, 65536, 4, 851995, 65536, 4, 917531, 65536, 4, 983067, 262144, 3, 1048603, 262144, 3, -589796, 262144, 3, -524260, 262144, 3, -458724, 262144, 3, -393188, 262144, 3, -327652, 262144, 3, -262116, 262144, 3, -196580, 262144, 3, -131044, 65536, 4, -65508, 65536, 4, 28, 65536, 4, 65564, 65536, 4, 131100, 65536, 4, 196636, 65536, 4, 262172, 65536, 4, 327708, 65536, 4, 393244, 65536, 4, 458780, 65536, 4, 524316, 65536, 4, 589852, 65536, 4, 655388, 65536, 4, 720924, 65536, 4, 786460, 65536, 4, 851996, 65536, 4, 917532, 65536, 4, 983068, 262144, 3, 1048604, 262144, 3, -589795, 262144, 3, -524259, 262144, 3, -458723, 262144, 3, -393187, 262144, 3, -327651, 262144, 3, -262115, 262144, 3, -196579, 262144, 3, -131043, 65536, 4, -65507, 65536, 4, 29, 65536, 4, 65565, 65536, 4, 131101, 65536, 4, 196637, 65536, 4, 262173, 65536, 4, 327709, 65536, 4, 393245, 65536, 4, 458781, 65536, 4, 524317, 65536, 4, 589853, 65536, 4, 655389, 65536, 4, 720925, 65536, 4, 786461, 65536, 4, 851997, 65536, 4, 917533, 65536, 4, 983069, 262144, 3, 1048605, 262144, 3, -589794, 262144, 3, -524258, 262144, 3, -458722, 262144, 3, -393186, 262144, 3, -327650, 262144, 3, -262114, 262144, 3, -196578, 262144, 3, -131042, 262144, 3, -65506, 262144, 3, 30, 262144, 3, 65566, 262144, 3, 131102, 262144, 3, 196638, 262144, 3, 262174, 262144, 3, 327710, 262144, 3, 393246, 262144, 3, 458782, 262144, 3, 524318, 262144, 3, 589854, 262144, 3, 655390, 262144, 3, 720926, 262144, 3, 786462, 262144, 3, 851998, 262144, 3, 917534, 262144, 3, 983070, 262144, 3, 1048606, 262144, 3, -589793, 262144, 3, -524257, 262144, 3, -458721, 262144, 3, -393185, 262144, 3, -327649, 262144, 3, -262113, 262144, 3, -196577, 262144, 3, -131041, 262144, 3, -65505, 262144, 3, 31, 262144, 3, 65567, 262144, 3, 131103, 262144, 3, 196639, 262144, 3, 262175, 262144, 3, 327711, 262144, 3, 393247, 262144, 3, 458783, 262144, 3, 524319, 262144, 3, 589855, 262144, 3, 655391, 262144, 3, 720927, 262144, 3, 786463, 262144, 3, 851999, 262144, 3, 917535, 262144, 3, 983071, 262144, 3, 1048607, 262144, 3)
layer_1/name = "Obstacle"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(65536, 0, 1, 65543, 0, 1, 458759, 0, 1, 458752, 0, 1)
layer_2/name = "Building"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
script = ExtResource("3_acinl")
main = NodePath("../..")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(391, 203)

[node name="Pokemon_center" parent="." instance=ExtResource("3_vioyy")]
position = Vector2(181, 65)

[node name="Camera" type="Camera2D" parent="." node_paths=PackedStringArray("tilemap", "UI")]
position = Vector2(144, 81)
zoom = Vector2(4, 4)
limit_smoothed = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("5_0705s")
tilemap = NodePath("../Node2D/Building")
moveOffset = 300
UI = NodePath("../UI")

[node name="Pikachu_2" parent="." instance=ExtResource("6_ft3bd")]
position = Vector2(63, 117)
collision_layer = 3
collision_mask = 3
collision_priority = 2.0
input_pickable = true

[node name="UI" type="Label" parent="."]
offset_left = 10.0
offset_top = 7.0
offset_right = 50.0
offset_bottom = 30.0

[connection signal="mouse_entered" from="Pikachu_2" to="." method="_on_pikachu_2_mouse_entered"]
[connection signal="mouse_exited" from="Pikachu_2" to="." method="_on_pikachu_2_mouse_exited"]
